test/files/neg/t7110.check
t7110.scala:2: error: A `try` without `catch` or `finally` has no effect.
  try { ??? } // warn
  ^
one error found
